fixing alignment

--- a/style.css
+++ b/style.css
@@ -31,10 +31,6 @@ div.basic{
     color:#00241B;
     width: 70%;
     font-size:.3em;
-    padding: auto;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
     text-align: center; 
 }
 h1{
